--- a/ExcelMoreScripts/ExcelMoreScripts.vbproj
+++ b/ExcelMoreScripts/ExcelMoreScripts.vbproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <RootNamespace>ExcelMoreScripts</RootNamespace>
     <TargetFramework>net6.0-windows7.0</TargetFramework>
+    <Version>1.0.0-beta01</Version>
     <NoWarn></NoWarn>
   </PropertyGroup>
 
