--- a/ExcelMoreScripts.Tests/ExcelMoreScripts.Tests.vbproj
+++ b/ExcelMoreScripts.Tests/ExcelMoreScripts.Tests.vbproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="Nukepayload2.Csv" Version="1.4.1" />
   </ItemGroup>
 
   <ItemGroup>
